--- a/files/minhajornadacc/fundamentos/matematicabasica/teoriadosnumerosearitimetica/proporcaoourazao.html
+++ b/files/minhajornadacc/fundamentos/matematicabasica/teoriadosnumerosearitimetica/proporcaoourazao.html
@@ -20,7 +20,68 @@
     </nav>
     <article id="post">
         <h1>Proporção ou Razão</h1>
-        <p>Ainda estou em processo de estudo. Assim que concluir essa etapa, vou estruturar e compartilhar meus conhecimentos aqui.</p>
+        <p>Quando digo qual a proporção das maçã para as laranjas, primeiro nos vem a dúvida que maçãs e que laranjas — ora as maças do cesto, há no cesto 10 laranjas e 20 maçãs, então a proporção é de 20 maçãs para 10 laranjas. Fácil, não?</p>
+        <p>Agora, vamos considerar uma situação diferente. Suponha que você tenha ido ao médico e ele prescreveu 2 comprimidos de um medicamento específico, uma quantidade diretamente relacionada ao seu peso. No entanto, você descobre que um amigo está enfrentando o mesmo problema e deseja saber quantos comprimidos ele deve tomar, sabendo que você pesa 80 kg e ele pesa 60 kg. Aqui entramos no mundo das proporções, pois se 2 comprimidos são adequados para 80 kg, quantos comprimidos seriam adequados para 60 kg?</p>
+        <p>Possivelmente, se você já teve contato com a regra de três, pode ter resolvido esse problema. Caso contrário, vamos aprender agora. Na regra de três simples, usamos quando as grandezas são diretamente proporcionais, ou seja, quando os números aumentam ou diminuem de maneira proporcional. Neste exemplo, usaremos a regra de três simples.</p>
+        <p>A expressão é a seguinte: "2 comprimidos estão para 80 kg, assim como x comprimidos estão para 60 kg." Para resolver isso, fazemos uma multiplicação cruzada de:
+        <math>
+            <mfrac>
+                <mn>2</mn>
+                <mn>80</mn>
+            </mfrac>
+            <mo>=</mo>
+            <mfrac>
+                <mn>x</mn>
+                <mn>60</mn>
+            </mfrac>
+        </math>
+        . Para:
+        <math>
+            <mn>2</mn>
+            <mo>*</mo>
+            <mn>60</mn>
+            <mo>=</mo>
+            <mn>x</mn>
+            <mo>*</mo>
+            <mn>80</mn>
+        </math>
+        ou
+        <math>
+            <mn>120</mn>
+            <mo>=</mo>
+            <mn>x</mn>
+            <mo>*</mo>
+            <mn>80</mn>
+        </math>
+        </p>
+        <p>Agora, precisamos encontrar o valor de x, ou seja, quantos comprimidos são adequados para 60 kg. Para isso, calculamos a razão entre 120 e 80, já que:
+        <math>
+            <mn>120</mn>
+            <mo>=</mo>
+            <mn>x</mn>
+            <mo>*</mo>
+            <mn>80</mn>
+        </math>
+        , o mesmo que
+        <math>
+            <mn>x</mn>
+            <mo>=</mo>
+            <mn>120</mn>
+            <mo>/</mo>
+            <mn>80</mn>
+        </math>
+        , onde
+        <math>
+            <mn>120</mn>
+            <mo>/</mo>
+            <mn>80</mn>
+            <mo>=</mo>
+            <mn>1,5</mn>
+        </math>
+        . Portanto, seu amigo precisaria tomar aproximadamente 1,5 comprimidos.
+        </p>
+        <p>A proporção de 2 comprimidos para 80 kg é a mesma que a proporção de 1,5 comprimidos para 60 kg, o que evidencia que as grandezas são proporcionais. Isso significa que, ao aumentarmos de 2 para 80, a grandeza aumenta, assim como ao passarmos de 1,5 para 60, também observamos um aumento na grandeza.</p>
+        <p>Por que então usamos o termo "razão" se ele parece ser sinônimo de "divisão"? Embora ambas as palavras estejam relacionadas em termos operacionais, "razão" e "divisão" comunicam ideias distintas. Quando empregamos o termo "razão", enfatizamos a relação proporcional entre as quantidades, a taxa de variação, a análise de dados e situações que envolvem comparações mais amplas. Por outro lado, quando falamos de "divisão", estamos simplesmente nos referindo a uma operação matemática específica. A escolha entre esses termos depende do contexto e da ênfase que desejamos dar à relação entre as quantidades.</p>
     </article>
     <nav id="menu">
         <span>Próx.: <a href="ordemdasoperacoes.html">1.2.2.8 Ordem das Operações</a>, 
