--- a/files/minhajornadacc/fundamentos/matematicabasica/logica.html
+++ b/files/minhajornadacc/fundamentos/matematicabasica/logica.html
@@ -19,7 +19,7 @@
             [ <a href="/files/posts/minhajornadacc.html">Índice</a> ]</span>
     </nav>
     <article id="post">
-        <h1>Dialética</h1>
+        <h1>Lógica</h1>
         <p>Ainda estou em processo de estudo. Assim que concluir essa etapa, vou estruturar e compartilhar meus conhecimentos aqui.</p>
     </article>
     <nav id="menu">
