--- a/files/minhajornadacc/meucaminho.html
+++ b/files/minhajornadacc/meucaminho.html
@@ -33,7 +33,7 @@
         <hr>
         <ul>
             <li>yonatan.fs@proton.me <i class="fa-solid fa-envelope"></i></li>
-            <li><a href="files/download/ JhonFs.pdf" target="_blank">Currículo <i class="fa-solid fa-download"></i></a></li>
+            <li><a href="/files/download/Currículo JhonFs.pdf" target="_blank">Currículo <i class="fa-solid fa-download"></i></a></li>
             <li><a href="https://github.com/Jhonatafs" target="_blank"><i class="fa-brands fa-github-alt"></i> GitHub</a></li>
             <li><a href="https://www.linkedin.com/in/jhonfs" target="_blank"><i class="fa-brands fa-linkedin-in"></i> LinkedIn</a></li>
         </ul>
