Conclusão de Matemática Básica

--- a/files/minhajornadacc/fundamentos/matematicabasica/teoriadosnumerosearitimetica/fracaomista.html
+++ b/files/minhajornadacc/fundamentos/matematicabasica/teoriadosnumerosearitimetica/fracaomista.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <nav id="menu">
-        <span>Próx.: <a href="proporcaoourazao.html">1.2.2.7 Proporção ou Razão</a>, 
+        <span>Próx.: <a href="ordemdasoperacoes.html">1.2.2.7 Ordem das Operações</a>, 
             Volt.: <a href="multiplicacaoedivisaodefracoes.html">1.2.2.5 Multiplicação e Divisão de Frações</a>&nbsp;&nbsp;&nbsp;&nbsp;
             [ <a href="/files/posts/minhajornadacc.html">Índice</a> ]</span>
     </nav>
@@ -97,7 +97,7 @@
     e, em seguida, converta-a em uma porcentagem. Lembre-se de que, quando lemos, entendemos, mas quando praticamos, realmente aprendemos. Isso se aplica especialmente à matemática.</p>
     </article>
     <nav id="menu">
-        <span>Próx.: <a href="proporcaoourazao.html">1.2.2.7 Proporção ou Razão</a>, 
+        <span>Próx.: <a href="ordemdasoperacoes.html">1.2.2.7 Ordem das Operações</a>, 
             Volt.: <a href="multiplicacaoedivisaodefracoes.html">1.2.2.5 Multiplicação e Divisão de Frações</a>&nbsp;&nbsp;&nbsp;&nbsp;
             [ <a href="/files/posts/minhajornadacc.html">Índice</a> ]</span>
     </nav>
