--- a/files/minhajornadacc/fundamentos/matematicabasica/teoriadosnumerosearitimetica/ordemdasoperacoes.html
+++ b/files/minhajornadacc/fundamentos/matematicabasica/teoriadosnumerosearitimetica/ordemdasoperacoes.html
@@ -21,8 +21,8 @@
 </head>
 <body>
     <nav id="menu">
-        <span>Próx.: <a href="../geometria.html">1.2.3 Geometria</a>, 
-            Volt.: <a href="proporcaoourazao.html">1.2.2.7 Proporção ou Razão</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <span>Próx.: <a href="proporcaoerazao.html">1.2.2.8 Proporção e Razão</a>, 
+            Volt.: <a href="fracaomista.html">1.2.2.6 Fração Mista</a>&nbsp;&nbsp;&nbsp;&nbsp;
             [ <a href="/files/posts/minhajornadacc.html">Índice</a> ]</span>
     </nav>
     <article id="post">
@@ -158,8 +158,8 @@
         <p>Ao seguir a ordem correta das operações, alcançamos o resultado preciso. Agora que compreendemos como funciona essa ordem, podemos resumi-la em uma palavra simples: PEMA, onde o "P" representa Parênteses, o "E" denota Expoentes, o "M" representa Multiplicação ou Divisão, e, por fim, o "A" simboliza Adição ou Subtração.</p>
     </article>
     <nav id="menu">
-        <span>Próx.: <a href="../geometria.html">1.2.3 Geometria</a>, 
-            Volt.: <a href="proporcaoourazao.html">1.2.2.7 Proporção ou Razão</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <span>Próx.: <a href="proporcaoerazao.html">1.2.2.8 Proporção e Razão</a>, 
+            Volt.: <a href="fracaomista.html">1.2.2.6 Fração Mista</a>&nbsp;&nbsp;&nbsp;&nbsp;
             [ <a href="/files/posts/minhajornadacc.html">Índice</a> ]</span>
     </nav>
     <footer>
