--- a/files/minhajornadacc/fundamentos/matematicabasica/teoriadosnumerosearitimetica/proporcaoerazao.html
+++ b/files/minhajornadacc/fundamentos/matematicabasica/teoriadosnumerosearitimetica/proporcaoerazao.html
@@ -14,12 +14,12 @@
 </head>
 <body>
     <nav id="menu">
-        <span>Próx.: <a href="ordemdasoperacoes.html">1.2.2.8 Ordem das Operações</a>, 
-            Volt.: <a href="fracaomista.html">1.2.2.5 Fração Mista</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <span>Próx.: <a href="../geometria.html">1.2.3 Geometria</a>, 
+            Volt.: <a href="ordemdasoperacoes.html">1.2.2.8 Ordem das Operações</a>&nbsp;&nbsp;&nbsp;&nbsp;
             [ <a href="/files/posts/minhajornadacc.html">Índice</a> ]</span>
     </nav>
     <article id="post">
-        <h1>Proporção ou Razão</h1>
+        <h1>Proporção e Razão</h1>
         <p>Quando digo qual a proporção das maçã para as laranjas, primeiro nos vem a dúvida que maçãs e que laranjas — ora as maças do cesto, há no cesto 10 laranjas e 20 maçãs, então a proporção é de 20 maçãs para 10 laranjas. Fácil, não?</p>
         <p>Agora, vamos considerar uma situação diferente. Suponha que você tenha ido ao médico e ele prescreveu 2 comprimidos de um medicamento específico, uma quantidade diretamente relacionada ao seu peso. No entanto, você descobre que um amigo está enfrentando o mesmo problema e deseja saber quantos comprimidos ele deve tomar, sabendo que você pesa 80 kg e ele pesa 60 kg. Aqui entramos no mundo das proporções, pois se 2 comprimidos são adequados para 80 kg, quantos comprimidos seriam adequados para 60 kg?</p>
         <p>Possivelmente, se você já teve contato com a regra de três, pode ter resolvido esse problema. Caso contrário, vamos aprender agora. Na regra de três simples, usamos quando as grandezas são diretamente proporcionais, ou seja, quando os números aumentam ou diminuem de maneira proporcional. Neste exemplo, usaremos a regra de três simples.</p>
@@ -84,8 +84,8 @@
         <p>Por que então usamos o termo "razão" se ele parece ser sinônimo de "divisão"? Embora ambas as palavras estejam relacionadas em termos operacionais, "razão" e "divisão" comunicam ideias distintas. Quando empregamos o termo "razão", enfatizamos a relação proporcional entre as quantidades, a taxa de variação, a análise de dados e situações que envolvem comparações mais amplas. Por outro lado, quando falamos de "divisão", estamos simplesmente nos referindo a uma operação matemática específica. A escolha entre esses termos depende do contexto e da ênfase que desejamos dar à relação entre as quantidades.</p>
     </article>
     <nav id="menu">
-        <span>Próx.: <a href="ordemdasoperacoes.html">1.2.2.8 Ordem das Operações</a>, 
-            Volt.: <a href="fracaomista.html">1.2.2.5 Fração Mista</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <span>Próx.: <a href="../geometria.html">1.2.3 Geometria</a>, 
+            Volt.: <a href="ordemdasoperacoes.html">1.2.2.8 Ordem das Operações</a>&nbsp;&nbsp;&nbsp;&nbsp;
             [ <a href="/files/posts/minhajornadacc.html">Índice</a> ]</span>
     </nav>
     <footer>
