--- a/files/minhajornadacc/fundamentos/matematicabasica/teoriadosnumerosearitimetica/proporcaoerazao.html
+++ b/files/minhajornadacc/fundamentos/matematicabasica/teoriadosnumerosearitimetica/proporcaoerazao.html
@@ -78,10 +78,11 @@
             <mo>=</mo>
             <mn>1,5</mn>
         </math>
-        . Portanto, seu amigo precisaria tomar aproximadamente 1,5 comprimidos.
+        . Portanto, seu amigo precisaria tomar 1,5 comprimidos.
         </p>
         <p>A proporção de 2 comprimidos para 80 kg é a mesma que a proporção de 1,5 comprimidos para 60 kg, o que evidencia que as grandezas são proporcionais. Isso significa que, ao aumentarmos de 2 para 80, a grandeza aumenta, assim como ao passarmos de 1,5 para 60, também observamos um aumento na grandeza.</p>
         <p>Por que então usamos o termo "razão" se ele parece ser sinônimo de "divisão"? Embora ambas as palavras estejam relacionadas em termos operacionais, "razão" e "divisão" comunicam ideias distintas. Quando empregamos o termo "razão", enfatizamos a relação proporcional entre as quantidades, a taxa de variação, a análise de dados e situações que envolvem comparações mais amplas. Por outro lado, quando falamos de "divisão", estamos simplesmente nos referindo a uma operação matemática específica. A escolha entre esses termos depende do contexto e da ênfase que desejamos dar à relação entre as quantidades.</p>
+        <p>Para uma explicação detalhada de regra de três acesse: <a href="https://aprovatotal.com.br/regra-de-tres-simples-composta/#:~:text=Utilizamos%20a%20regra%20de%20tr%C3%AAs%20composta%20quando%20h%C3%A1%20tr%C3%AAs%20mais,que%20tem%20a%20inc%C3%B3gnita%20sempre">Aprova Tota</a> ou <a href="https://pt.wikipedia.org/wiki/Regra_de_tr%C3%AAs">Wikipedia</a> </p>
     </article>
     <nav id="menu">
         <span>Próx.: <a href="../geometria.html">1.2.3 Geometria</a>, 
