--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/css/var.css">
     <link rel="stylesheet" href="/css/style-all.css">
     <link rel="stylesheet" href="/css/style-index.css">
-    <link rel="icon" href="/img/favicon.png">
+    <link rel="icon" href="/img/favicon.svg">
     <title>JhonFs</title>
 </head>
 <body>
