--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>JhonFs</title>
 </head>
 <body>
-    <h3 id="logo"><a href="http://jhonfs.com">img src="/img/favicon.svg" alt=""/>Jhonfs</a></h3>
+    <h3 id="logo"><a href="http://jhonfs.com"><img src="/img/favicon.svg" alt=""/>Jhonfs</a></h3>
     <section id="welcome">
         <img id="meimg" src="img/me.gif" alt="">
         <p>Bem-vindo ao meu pequeno espaço na web, sou o Jhon de Jhonata, derivado do latim <i>Ionathan</i>, que veio do grego <i>Ιωναθαν</i>, cuja origem vem do hebraico <i>יונתן</i>. Uso esse espaço para escrever, publicar projetos, etc.</p>
