Incluir Notas Matemáticas
Correção de CSS e Inclusão de Notas matemáticas

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
     <main id="arquive">
         <h3>Arquivos</h3>
         <article class="publi">
+            <p class="data">2023-04-08</p>
+            <a class="title" href="files/notas-de-estudo/fundamentos-da-matematica.html">
+                <p>Fundamentos da Matemática <span class="category">[ Notas de Estudo ]</span></p>
+            </a>
+        </article>
+        <article class="publi">
             <p class="data">2023-04-22</p>
             <a class="title" href="files/games/jogo_da_velha.html">
                 <p>Jogo da Velha <span class="category">[ Game ]</span></p>
