--- a/files/notas-de-estudo/fundamentos-da-matematica/nocoes-de-logica.html
+++ b/files/notas-de-estudo/fundamentos-da-matematica/nocoes-de-logica.html
@@ -79,11 +79,11 @@
             <tr>
                 <th>Amigo 4</th>
                 <td>Se Falso</td>
-                <td>Se Verdade</td>
+                <td>Se Falso</td>
                 <td>Então Verdade</td>
             </tr>
         </table>
-        <p>Caso modemos o conectivo o resultado é diferente, vajamos:</p>
+        <p>Vou mostrar com outros conectivos, vajamos:</p>
         <table>
             <tr>
                 <th>BG</th>
