--- a/files/notas-de-estudo/fundamentos-da-matematica/nocoes-de-logica.html
+++ b/files/notas-de-estudo/fundamentos-da-matematica/nocoes-de-logica.html
@@ -40,11 +40,17 @@
         <p>"100 é maior que 10 <strong>ou</strong> 10 é maior que 11 (100 > 10 <u>∨</u> 100 > 11)" – Verdadeiro.</p>
         <h3>Condicional</h3>
         <p>Imaginemos: Ao acordar você vai à cozinha, pega um copo de chá, e bebendo-o chega ao quintal, logo percebe que ele está todo molhado, intrigado tenta descobrir o porquê está molhado. Após pensar muito chega a conclusão de que choveu a noite, por isso o chão está molhado. Passado-se algum tempo, enquanto conversa com sua mãe, afirma, a chuva a noite foi forte. Ela nega, diz que não choveu, você sem entender volta ao quintal e percebe que a caixa d’água está furada e por isso o quintal está molhado.</p>
-        <p>Se a caixa d’água está furada, então o chão está molhado. Essa é a ideia da implicação lógica condicional. Caso a premissa ‘se’ partir de uma verdade, a conclusão ‘então’ tem de ser verdadeira, se for falsa a implicação lógica será falsa. Porém, se partir de uma premissa falsa e a conclusão for verdadeira, a implicação é verdade, é o mesmo de “Se choveu a noite, então o chão está molhado”, o chão está molhado independente de ter chovido ou não.</p>
-        <p>Entretanto, se a premissa for falsa ela pode também ter uma implicação lógica verdadeira se corroborar com a premissa falsa, a conclusão tem de ser falsa. Um exemplo com a matemática:</p>
-        <p>1+1=2 → 2+2=4, verdade, premissa verdadeira, pede conclusão verdadeira;</p>
-        <p>1+1=3 → 2+2=4, verdade, premissa falsa, pede conclusão verdadeira;</p>
-        <p>1+1=3 → 2+2=1, verdade, premissa falsa, pede coerência com conclusão;</p>
+        <p>Vou apresentar implicações lógicas e quero que responda a si mesmo qual é falsa e qual é verdadeira, preparado?</p>
+        <ol>
+            <li><p>Choveu ontem então o chão está molhado.</p></li>
+            <li><p>Não choveu ontem então o chão está molhado.</p></li>
+            <li><p>A caixa d'aguá não está furada então o chão não está molhado.</p></li>
+            <li><p>A caixa d'aguá está furada então o chão não está molhado.</p></li>
+        </ol>
+        <p>A primeira é verdadeira, F → V = V; a segunda é verdadeira, V → V = V; na terceira temos uma implicação novamente verdadeira, F → F = V, e por último, V → F = F. Enquanto estudava sobre o condicional (→) me perguntava como pode ser verdade uma implicação que parte de uma premissa falsa? As outras são intuitivas, mas essa confunde a mente. Foi quando descobri a FALÁCIA DA IMPLICAÇÃO MATERIAL de Aristóteles.</p>
+        <h4>...falácia da implicação material</h4>
+        <p>Em desenvolvimento...</p>    
+        <p></p>
         <h3>Bicondicional</h3>
         <p>Esse é mais exigente, é o diabo nas entrelinhas da famosa frase de René Descartes (1596-1650): cogito, ergo sum (penso, logo existo). E, se existo, logo penso. Para um poder ser verdade, o outro precisa ser verdade. Assim funciona o bicondicional, ele exige que ambas as sentenças sejam verdadeiras ou falsas. Em matemática, se apresenta assim: 1 < 2 ↔ 2 > 1. Um é menor que os dois se e somente se os dois forem maiores que um.</p>
         <h2>Tabela Verdade</h2>
