Remoção do Link Matemática

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     </section>
     <main id="arquive">
         <h3>Arquivos</h3>
-        <article class="publi">
+        <!--<article class="publi">
             <p class="data">2023-04-08</p>
             <a class="title" href="files/notas-de-estudo/fundamentos-da-matematica.html">
                 <p>Fundamentos da Matemática <span class="category">[ Notas de Estudo ]</span></p>
             </a>
-        </article>
+        </article>-->
         <article class="publi">
             <p class="data">2023-04-22</p>
             <a class="title" href="files/games/jogo_da_velha.html">
